--- a/bUSDC7/index.html
+++ b/bUSDC7/index.html
@@ -152,7 +152,6 @@
     .two-col{display:grid; grid-template-columns:1fr 1fr; gap:10px}
     @media (max-width:560px){ .two-col{grid-template-columns:1fr} }
 
-    /* Vault modal uses always-visible textareas */
     .vault-ta{display:block; min-height:120px;}
     .muted{color:var(--muted);}
 
@@ -173,8 +172,10 @@
       border-radius:8px;
       border:1px solid rgba(255,255,255,.10);
       background:rgba(0,0,0,.14);
+      user-select:none;
     }
     .clickable:hover{border-color: rgba(94,234,212,.35)}
+    .hintline{display:flex; justify-content:space-between; gap:10px; align-items:center; flex-wrap:wrap; margin-top:6px}
   </style>
 </head>
 <body>
@@ -229,17 +230,11 @@
         <div class="grid2">
           <div class="kv">
             <div class="k">Available USDC</div>
-            <div class="v big">
-              <span id="usdcAvailOut" class="clickable" title="Tap to use max for deposit">—</span>
-            </div>
-            <div class="small muted">Tap to fill Deposit</div>
+            <div class="v big"><span id="usdcAvailOut">—</span></div>
           </div>
           <div class="kv">
             <div class="k">Available bUSDC</div>
-            <div class="v big">
-              <span id="busdcAvailOut" class="clickable" title="Tap to use max for withdraw">—</span>
-            </div>
-            <div class="small muted">Tap to fill Withdraw</div>
+            <div class="v big"><span id="busdcAvailOut">—</span></div>
           </div>
         </div>
         <div class="actions">
@@ -251,7 +246,7 @@
 
       <!-- RIGHT -->
       <div class="card">
-        <h2>Vault state</h2>
+        <h2>Vault Info</h2>
 
         <div class="grid2">
           <div class="kv">
@@ -274,7 +269,7 @@
         </div>
 
         <div class="actions">
-          <button class="primary" id="refreshBtn">Refresh state</button>
+          <button class="primary" id="refreshBtn">Refresh</button>
           <button class="ghost" id="toggleLogsBtn">Show logs</button>
         </div>
 
@@ -284,19 +279,16 @@
         <div class="hr"></div>
 
         <h2>Actions</h2>
-        <div class="small">
-          Fee: <b>0.15%</b>. <span class="muted">The fee contributes towards the development of this bUSDC UI.</span>
-          <br/>
-          Minimums (gross input): <span class="mono">Deposit ≥ 10.015 USDC</span> · <span class="mono">Withdraw ≥ 10.015 bUSDC</span>
-          <br/>
-          Fee is taken <b>within</b> the amount you enter (e.g. enter 1000 → fee 1.5 → net 998.5).
-        </div>
 
         <div class="two-col" style="margin-top:10px">
           <div>
             <div class="input">
-              <div class="small">Deposit USDC (gross input) — fee inside amount</div>
+              <div class="small">Deposit USDC</div>
               <input id="depositAmt" inputmode="decimal" placeholder="e.g. 1000.00" />
+              <div class="hintline small">
+                <span>Available: <span id="usdcAvailInline" class="clickable">—</span></span>
+                <span class="muted">tap to max</span>
+              </div>
               <div class="fee-box">
                 <div class="fee-row"><span>Fee (0.15%)</span><b id="depFeeOut">—</b></div>
                 <div class="fee-row" style="margin-top:6px"><span>Net deposited</span><b id="depNetOut">—</b></div>
@@ -312,8 +304,12 @@
 
           <div>
             <div class="input">
-              <div class="small">Withdraw bUSDC (gross input) — fee inside amount</div>
+              <div class="small">Withdraw bUSDC</div>
               <input id="redeemAmt" inputmode="decimal" placeholder="e.g. 1000.00" />
+              <div class="hintline small">
+                <span>Available: <span id="busdcAvailInline" class="clickable">—</span></span>
+                <span class="muted">tap to max</span>
+              </div>
               <div class="fee-box">
                 <div class="fee-row"><span>Fee (0.15%)</span><b id="wdFeeOut">—</b></div>
                 <div class="fee-row" style="margin-top:6px"><span>Net withdrawn</span><b id="wdNetOut">—</b></div>
@@ -326,6 +322,14 @@
             <textarea id="redeemXdr" spellcheck="false"></textarea>
             <div class="status-line" id="redeemStatus"></div>
           </div>
+        </div>
+
+        <div class="hr"></div>
+
+        <div class="small muted">
+          Fee: <b style="color:var(--text)">0.15%</b>. The fee contributes towards the development of this bUSDC UI.<br/>
+          Minimums: <span class="mono">Deposit ≥ 10.015 USDC</span> · <span class="mono">Withdraw ≥ 10.015 bUSDC</span><br/>
+          Fee is taken within the amount you enter (e.g. enter 1000 → fee 1.5 → net 998.5).
         </div>
       </div>
     </div>
@@ -427,16 +431,16 @@
 
     const DECIMALS = 7;
 
-    // Contract min (net to contract):
-    const MIN_NET = 10; // applies to both deposit (USDC) and redeem (bUSDC)
-    // UI min (gross input): 10 / (1-0.0015) = 10.015022... we show 10.015
+    const MIN_NET = 10;
     const MIN_GROSS_DISPLAY = "10.015";
 
     // -----------------------
-    // Stellar SDK import
+    // Imports (✅ WC via esm.sh to avoid unpkg CORS)
     // -----------------------
     import * as StellarSdkNS from "https://esm.sh/stellar-sdk@12.2.0?bundle";
     const StellarSdk = StellarSdkNS.default ?? StellarSdkNS;
+
+    import SignClient from "https://esm.sh/@walletconnect/sign-client@2.21.8";
 
     // -----------------------
     // QRCode helper
@@ -449,40 +453,6 @@
       _qrLib = mod.default ?? mod;
       if (typeof _qrLib.toCanvas !== "function") throw new Error("QRCode toCanvas missing");
       return _qrLib;
-    }
-
-    // -----------------------
-    // WalletConnect loader
-    // -----------------------
-    function loadScript(src) {
-      return new Promise((resolve, reject) => {
-        const s = document.createElement("script");
-        s.src = src;
-        s.async = true;
-        s.onload = resolve;
-        s.onerror = () => reject(new Error("Failed to load: " + src));
-        document.head.appendChild(s);
-      });
-    }
-
-    async function getSignClient() {
-      if (window.SignClient) return window.SignClient.default ?? window.SignClient;
-
-      try {
-        const mod = await import("https://cdn.jsdelivr.net/npm/@walletconnect/sign-client@2.17.1/dist/esm/index.js");
-        return mod.default ?? mod.SignClient ?? mod;
-      } catch {}
-
-      try {
-        const mod = await import("https://unpkg.com/@walletconnect/sign-client@2.17.1/dist/esm/index.js");
-        return mod.default ?? mod.SignClient ?? mod;
-      } catch {}
-
-      try { await loadScript("https://cdn.jsdelivr.net/npm/@walletconnect/sign-client@2.17.1/dist/index.umd.js"); }
-      catch { await loadScript("https://unpkg.com/@walletconnect/sign-client@2.17.1/dist/index.umd.js"); }
-
-      if (!window.SignClient) throw new Error("WalletConnect UMD loaded but window.SignClient is missing.");
-      return window.SignClient.default ?? window.SignClient;
     }
 
     // -----------------------
@@ -562,7 +532,6 @@
       throw new Error("No Horizon Server constructor found in stellar-sdk build.");
     }
 
-    const SIM_SOURCE = "GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF";
     const contract = new StellarSdk.Contract(CONTRACT_ID);
     const USDC_ASSET = new StellarSdk.Asset(USDC_CODE, USDC_ISSUER);
     const BUSDC_ASSET = new StellarSdk.Asset(BUSDC_CODE, BUSDC_ISSUER);
@@ -606,6 +575,9 @@
 
     const usdcAvailOut = $("usdcAvailOut");
     const busdcAvailOut = $("busdcAvailOut");
+    const usdcAvailInline = $("usdcAvailInline");
+    const busdcAvailInline = $("busdcAvailInline");
+
     const refreshBalBtn = $("refreshBalBtn");
     const addTrustBtn = $("addTrustBtn");
     const balStatus = $("balStatus");
@@ -765,9 +737,6 @@
 
     async function ensureWcClient({ retry=false } = {}){
       if(wcClient) return wcClient;
-
-      const SignClient = await getSignClient();
-
       try{
         wcClient = await SignClient.init({
           projectId: PROJECT_ID,
@@ -1026,7 +995,6 @@
     // Balance computation: "available" = balance - selling_liabilities
     // -----------------------
     function strToScaledBigint(amountStr){
-      // horizon balances are string decimals with 7 dp for classic assets
       return parseDecimalToBigint(amountStr || "0", DECIMALS);
     }
 
@@ -1035,6 +1003,8 @@
       if(!StellarSdk.StrKey.isValidEd25519PublicKey(pk)){
         usdcAvailOut.textContent = "—";
         busdcAvailOut.textContent = "—";
+        usdcAvailInline.textContent = "—";
+        busdcAvailInline.textContent = "—";
         availableUSDCScaled = null;
         availableBUSDCScaled = null;
         return;
@@ -1046,28 +1016,32 @@
         const usdc = (j.balances || []).find(b => b.asset_code===USDC_CODE && b.asset_issuer===USDC_ISSUER);
         const busdc = (j.balances || []).find(b => b.asset_code===BUSDC_CODE && b.asset_issuer===BUSDC_ISSUER);
 
-        // USDC
         if(usdc){
           const bal = strToScaledBigint(usdc.balance);
           const liab = strToScaledBigint(usdc.selling_liabilities || "0");
           const avail = bal > liab ? (bal - liab) : 0n;
           availableUSDCScaled = avail;
-          usdcAvailOut.textContent = fmtScaledBigint(avail);
+          const s = fmtScaledBigint(avail);
+          usdcAvailOut.textContent = s;
+          usdcAvailInline.textContent = s;
         } else {
           availableUSDCScaled = 0n;
           usdcAvailOut.textContent = "NO TRUSTLINE";
+          usdcAvailInline.textContent = "NO TRUSTLINE";
         }
 
-        // bUSDC
         if(busdc){
           const bal = strToScaledBigint(busdc.balance);
           const liab = strToScaledBigint(busdc.selling_liabilities || "0");
           const avail = bal > liab ? (bal - liab) : 0n;
           availableBUSDCScaled = avail;
-          busdcAvailOut.textContent = fmtScaledBigint(avail);
+          const s = fmtScaledBigint(avail);
+          busdcAvailOut.textContent = s;
+          busdcAvailInline.textContent = s;
         } else {
           availableBUSDCScaled = 0n;
           busdcAvailOut.textContent = "NO TRUSTLINE";
+          busdcAvailInline.textContent = "NO TRUSTLINE";
         }
 
         balStatus.textContent = "";
@@ -1079,15 +1053,13 @@
     }
     refreshBalBtn.onclick = refreshBalance;
 
-    // Tap balances to fill inputs
-    usdcAvailOut.onclick = ()=>{
+    usdcAvailInline.onclick = ()=>{
       if(typeof availableUSDCScaled !== "bigint") return;
-      // fill deposit gross with full available usdc (user pays exactly this)
       depositAmt.value = fmtScaledBigint(availableUSDCScaled);
       updateFeeBoxes();
       toast({type:"ok", title:"Filled", message:"Deposit amount set to your available USDC."});
     };
-    busdcAvailOut.onclick = ()=>{
+    busdcAvailInline.onclick = ()=>{
       if(typeof availableBUSDCScaled !== "bigint") return;
       redeemAmt.value = fmtScaledBigint(availableBUSDCScaled);
       updateFeeBoxes();
@@ -1158,7 +1130,6 @@
     // Fee box updates (fee within gross)
     // -----------------------
     function updateFeeBoxes(){
-      // Deposit
       try{
         const gross = parseDecimalToBigint(depositAmt.value, DECIMALS);
         if(gross > 0n){
@@ -1166,14 +1137,9 @@
           const net = gross > fee ? (gross - fee) : 0n;
           depFeeOut.textContent = `${fmtScaledBigint(fee)} ${USDC_CODE}`;
           depNetOut.textContent = `${fmtScaledBigint(net)} ${USDC_CODE}`;
-        } else {
-          depFeeOut.textContent = "—"; depNetOut.textContent = "—";
-        }
-      }catch{
-        depFeeOut.textContent = "—"; depNetOut.textContent = "—";
-      }
+        } else { depFeeOut.textContent = "—"; depNetOut.textContent = "—"; }
+      }catch{ depFeeOut.textContent = "—"; depNetOut.textContent = "—"; }
 
-      // Withdraw
       try{
         const gross = parseDecimalToBigint(redeemAmt.value, DECIMALS);
         if(gross > 0n){
@@ -1181,12 +1147,8 @@
           const net = gross > fee ? (gross - fee) : 0n;
           wdFeeOut.textContent = `${fmtScaledBigint(fee)} ${BUSDC_CODE}`;
           wdNetOut.textContent = `${fmtScaledBigint(net)} ${BUSDC_CODE}`;
-        } else {
-          wdFeeOut.textContent = "—"; wdNetOut.textContent = "—";
-        }
-      }catch{
-        wdFeeOut.textContent = "—"; wdNetOut.textContent = "—";
-      }
+        } else { wdFeeOut.textContent = "—"; wdNetOut.textContent = "—"; }
+      }catch{ wdFeeOut.textContent = "—"; wdNetOut.textContent = "—"; }
     }
     depositAmt.addEventListener("input", updateFeeBoxes);
     redeemAmt.addEventListener("input", updateFeeBoxes);
@@ -1199,12 +1161,8 @@
     const MIN_GROSS_BI = parseDecimalToBigint(MIN_GROSS_DISPLAY, DECIMALS);
 
     function enforceGrossAndNet({ gross, net, label }){
-      if(gross < MIN_GROSS_BI){
-        throw new Error(`${label} minimum is ${MIN_GROSS_DISPLAY} (gross).`);
-      }
-      if(net < MIN_NET_BI){
-        throw new Error(`${label} net amount must be ≥ ${MIN_NET}.`);
-      }
+      if(gross < MIN_GROSS_BI) throw new Error(`${label} minimum is ${MIN_GROSS_DISPLAY}.`);
+      if(net < MIN_NET_BI) throw new Error(`${label} net amount must be ≥ ${MIN_NET}.`);
     }
 
     // -----------------------
@@ -1237,11 +1195,9 @@
       }
     }
 
-    // -----------------------
-    // Build a single tx:
-    // - fee payment (from gross, asset depends on action)
+    // Build single tx:
+    // - fee payment (asset depends on action)
     // - soroban call with NET amount
-    // -----------------------
     async function buildPreparedXdrWithFeeInside({ method, grossScaled }){
       if(!pubkey) throw new Error("Connect a wallet first.");
       const server = makeSorobanServer(SOROBAN_RPC);
@@ -1282,9 +1238,7 @@
       return { xdr: prepared.toXDR(), feeBig, netBig };
     }
 
-    // -----------------------
     // Vault modal submit
-    // -----------------------
     submitVaultXdrBtn.onclick = async ()=>{
       try{
         const xdr = (vaultXdrFromVault.value || "").trim();
@@ -1308,16 +1262,12 @@
       }
     };
 
-    // -----------------------
     // Actions
-    // -----------------------
     async function doActionFeeInside(method, inputEl, xdrEl, statusEl, label){
       statusEl.textContent = "";
       try{
         if(!pubkey){ openConnectModal(); return; }
-        if(mode==="pubkey" || mode==="none"){
-          throw new Error("Read-only. Connect WalletConnect/Freighter or use secret key.");
-        }
+        if(mode==="pubkey" || mode==="none") throw new Error("Read-only. Connect WalletConnect/Freighter or use secret key.");
 
         const gross = parseDecimalToBigint(inputEl.value, DECIMALS);
         if(!(gross > 0n)) throw new Error("Enter an amount.");
@@ -1327,13 +1277,9 @@
 
         enforceGrossAndNet({ gross, net, label });
 
-        // deposit requires bUSDC trustline (to receive bUSDC)
         if(method === "deposit"){
           const ok = await ensureBUSDCTrustline({ interactive:true });
-          if(!ok){
-            statusEl.textContent = "Missing bUSDC trustline. Create it first.";
-            return;
-          }
+          if(!ok){ statusEl.textContent = "Missing bUSDC trustline. Create it first."; return; }
         }
 
         const { xdr, feeBig, netBig } = await buildPreparedXdrWithFeeInside({ method, grossScaled: gross });
@@ -1346,22 +1292,13 @@
           pendingActionStatusEl = statusEl;
           pendingActionMethod = method;
           openVaultModal(signed);
-          toast({
-            type:"info",
-            title:"Vault required",
-            message:`Fee is inside your amount. Net ${fmtScaledBigint(netBig)} · fee ${fmtScaledBigint(feeBig)}.`,
-            timeout:5200
-          });
+          toast({ type:"info", title:"Vault required", message:`Net ${fmtScaledBigint(netBig)} · fee ${fmtScaledBigint(feeBig)}`, timeout:5200 });
           return;
         }
 
         const res = await submitSorobanSignedXdr(signed);
         statusEl.innerHTML = `Submitted ✓ hash: <span class="mono">${res.hash}</span>`;
-        toast({
-          type:"ok",
-          title:"Submitted",
-          message:`${label} success · net ${fmtScaledBigint(netBig)} · fee ${fmtScaledBigint(feeBig)}`
-        });
+        toast({ type:"ok", title:"Submitted", message:`${label} success · net ${fmtScaledBigint(netBig)} · fee ${fmtScaledBigint(feeBig)}` });
 
         refreshState().catch(()=>{});
         refreshBalance().catch(()=>{});
@@ -1372,9 +1309,7 @@
       }
     }
 
-    // -----------------------
     // Wire buttons
-    // -----------------------
     depositXdrToggle.onclick = ()=> toggleTextarea(depositXdr, depositXdrToggle);
     redeemXdrToggle.onclick = ()=> toggleTextarea(redeemXdr, redeemXdrToggle);
 
@@ -1387,9 +1322,7 @@
       toggleLogsBtn.textContent = hidden ? "Hide logs" : "Show logs";
     };
 
-    // -----------------------
     // Init
-    // -----------------------
     refreshState().catch(()=>{});
     refreshBalance().catch(()=>{});
   </script>
